# ml_news_group

./: model.py  newgroups_model.joblib  predict.py  pyproject.toml
